--- a/main.bib
+++ b/main.bib
@@ -13,3 +13,11 @@
     year = {2010},
     edition = {Second}
 }
+
+@online{bib:CHEM20100Notes,
+    title = {{CHEM} 20100 ({Inorganic Chemistry I}) Notes},
+    author = {Steven Labalme},
+    year = {2021},
+    url = {https://github.com/shadypuck/CHEM20100Notes/blob/master/Notes/notes.pdf},
+    version = {Accessed 29 March 2021}
+}
