TA Office Hours 1

--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -186,5 +186,29 @@
 
 
 
+\section{Office Hours (Whitmeyer)}
+\begin{itemize}
+    \item \marginnote{3/30:}Electron affinity, not electronegativity, for the periodic trend?
+    \begin{itemize}
+        \item At higher levels, people don't really distinguish between the two.
+    \end{itemize}
+    \item To what extent do we need to have the spectrochemical series memorized?
+    \begin{itemize}
+        \item You don't need to memorize them, but it's good to know some of them off the top (exams are open note, but there are time constraints).
+    \end{itemize}
+    \item In connection with oxidation state, Prof. Anderson mentioned that $d^5$ is almost always high spin, and $d^6$ is often low spin. Why? Shouldn't the stabilized orbitals be split more?
+    \begin{itemize}
+        \item 5 $d$ electrons each in their own orbital minimizes the pairing energy.
+        \item 6 $d$ electrons all occupy the lower orbitals to minimize antibonding contributions.
+    \end{itemize}
+    \item Using the textbook:
+    \begin{itemize}
+        \item The lectures are essential in this course, and if you don't understand something in the lecture, ask Sophie or John or read the textbook.
+        \item If it's in those chapters, it could be asked about, but it probably won't be if John doesn't talk about it.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
